--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Flask==2.2.2
 pandas==1.4.4
 scikit-learn==1.1.1
 gunicorn
-#python-git==2018.2.1 # solo para Mac
+python-git==2018.2.1 # solo para Mac
 
